--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     >
 
     <TextView
+        android:id="@+id/resultTextView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center"
@@ -31,7 +32,6 @@
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintWidth_percent="0.5" />
-
     <Button
         android:id="@+id/point_button"
         android:layout_width="0dp"
