little design changes, refactoring

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:background="@color/Maroon"
+    android:padding="5dp"
     >
 
     <TextView
@@ -28,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="0"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -40,7 +41,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="."
-        android:textSize="20sp"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toRightOf="@+id/zeroButton"
@@ -53,7 +54,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="="
-        android:textSize="50sp"
+        android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.2"
         app:layout_constraintLeft_toRightOf="@id/pointButton"
@@ -66,7 +67,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="1"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/zeroButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -79,7 +80,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="2"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/zeroButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toRightOf="@id/oneButton"
@@ -92,7 +93,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="3"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/zeroButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toRightOf="@id/twoButton"
@@ -105,7 +106,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="4"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/oneButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -118,7 +119,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="5"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/oneButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toRightOf="@id/oneButton"
@@ -131,7 +132,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="6"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/oneButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toRightOf="@id/twoButton"
@@ -144,7 +145,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="7"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/fourButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -157,7 +158,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="8"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/fourButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toRightOf="@id/oneButton"
@@ -170,7 +171,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="9"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/fourButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintLeft_toRightOf="@id/twoButton"
@@ -183,7 +184,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="+"
-        android:textSize="50sp"
+        android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@id/equalButton"
         app:layout_constraintHeight_percent="0.2"
         app:layout_constraintRight_toRightOf="parent"
@@ -196,7 +197,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="÷"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/sevenButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintRight_toLeftOf="@id/multiplyButton"
@@ -209,7 +210,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="×"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/sevenButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintRight_toLeftOf="@id/minusButton"
@@ -235,12 +236,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:backgroundTint="@color/DimGray"
-        android:text="Clear ALL"
-        android:textSize="20sp"
+        android:text="C"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/sevenButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintRight_toLeftOf="@id/divideButton"
-        android:textColor="@color/White"
+        android:textColor="@color/Orange"
         app:layout_constraintWidth_percent="0.25" />
 
     <Button
@@ -249,7 +250,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="("
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/multiplyButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintRight_toLeftOf="@id/closingBracketButton"
@@ -262,7 +263,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text=")"
-        android:textSize="20sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/minusButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintRight_toRightOf="parent"
@@ -275,7 +276,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="⊲"
-        android:textSize="30sp"
+        android:textSize="40sp"
         app:layout_constraintBottom_toTopOf="@id/divideButton"
         app:layout_constraintHeight_percent="0.1"
         app:layout_constraintRight_toLeftOf="@id/openingBracketButton"
