--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -283,5 +283,20 @@
         android:textColor="@color/White"
         app:layout_constraintWidth_percent="0.25" />
 
+    <Button
+        android:background="@drawable/rounded_rectangle_background"
+        android:id="@+id/historyButton"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="History"
+        android:padding="0dp"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@id/clearButton"
+        app:layout_constraintHeight_percent="0.1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:textColor="@color/White"
+        app:layout_constraintWidth_percent="0.25" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
